# cite_base

./: .gitignore  docker-compose.yml
agents/: .gitignore  pyproject.toml  rag.ipynb  rag_chain.py  rag_ingest.py  resoning_agent.py  retrieval_orchestrator_agent.py
agents/notebooks/: milvus_demo.db  orchestration.ipynb  query_writer_agent.ipynb  rag.ipynb  reasoning_agent.ipynb  retrieval_orchestrator_agent.ipynb
agents/prompts/: query_decomposition_examples.md  query_decomposition_prompt.md  reasoning_prompt.md  retrieval_orchestrator_prompt.md  retriever_prompt.md  todo_list_prompt.md  vectorstore_retrieval_prompt.md
agents/utils/: file_io.py
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  db.py  dependencies.py  main.py  models.py  pyproject.toml  vectorstore.py
backend/agents/: orchestration.py  rag_chain.py  retrieval_orchestrator_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 04f751ef1854_fix_docs_table_schema.py  71fed11a91d2_renames_document_uuid_to_document_uuids_.py  dd6851322c09_current.py  e1c94591b778_refactor_docs_models.py
backend/routes/: agent.py  auth.py  documents.py
backend/utils/: file_io.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/custom/: Header.tsx  Hero.tsx
frontend/src/components/custom/auth/: AuthLayout.tsx  Signin.tsx  Signup.tsx
frontend/src/components/custom/dashboard/: Chat.tsx  Dashboard.tsx  DisplayDocs.tsx  DocumentUpload.tsx
frontend/src/components/ui/: button.tsx  lamp.tsx
frontend/src/hooks/: useDocs.tsx
