[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.3.1",
    "docling-core[chunking-openai]>=2.57.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-docling>=2.0.0",
    "langchain-milvus>=0.3.2",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.16",
    "pymilvus[milvus-lite]>=2.6.6",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
]
